Bug 141681 - CBR encoded mp3 files with "Info" Xing header have their duration reported incorrected by taglib
Summary: CBR encoded mp3 files with "Info" Xing header have their duration reported in...
Status: RESOLVED FIXED
Alias: None
Product: taglib
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-14 14:17 UTC by Xavier Duret
Modified: 2007-04-02 00:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Add support for "Info" headers (509 bytes, patch)
2007-02-14 14:18 UTC, Xavier Duret
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xavier Duret 2007-02-14 14:17:47 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

"Info" headers are just like "Xing" headers but for CBR files. Failure to use it result in improper calculation of the song length and the bitrate.
Comment 1 Xavier Duret 2007-02-14 14:18:41 UTC
Created attachment 19687 [details]
Add support for "Info" headers

This fix is trivial.
Comment 2 Scott Wheeler 2007-04-02 00:23:08 UTC
SVN commit 649037 by wheeler:

Check for CBR Info headers also.

BUG:141681


 M  +1 -1      xingheader.cpp  


--- trunk/kdesupport/taglib/taglib/mpeg/xingheader.cpp #649036:649037
@@ -88,7 +88,7 @@
 {
   // Check to see if a valid Xing header is available.
 
-  if(!data.startsWith("Xing"))
+  if(!data.startsWith("Xing") && !data.startsWith("Info"))
     return;
 
   // If the XingHeader doesn't contain the number of frames and the total stream