Check for CBR Info headers also.

BUG:141681


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@649037 283d02a7-25f6-0310-bc7c-ecb5cbfe19da